tests/parsing/smtlib/v2.7/errors/003_qual_identifier_bad_sort_2.smt2
(set-logic ALL)
(assert (as foo !))
